# movie-ticket-booking-system-10th-grade-NVBalandin22

./: .gitignore  CMakeLists.txt  README.md
CinemaProject/CinemaProject/: CinemaProject.cpp
data/: data.txt
include/: cinema.h  functions.h  movie.h  show.h
src/: cinema.cpp  functions.cpp  main.cpp  movie.cpp  show.cpp
